WebGL2: Red flickering when using copyTexImage2D() https://bugs.webkit.org/show_bug.cgi?id=222790

Patch by Kimmo Kinnunen <kkinnunen@apple.com> on 2021-03-09
Reviewed by Kenneth Russell.

Source/WebCore:

Reading non-full FBO rectangle with copyTexImage2D would
cause invalid operation on WebGL2.
This is probably due to misunderstanding between what was old
GL desktop + GLES mobile backends
"isGLES2Compatible() == runs on Desktop GL"
vs new ANGLE backend
"isGLES2Compatible() == !m_isForWebGL2".

Add testing to fast/canvas/webgl/copy-tex-image-and-sub-image-2d.html.

* platform/graphics/angle/GraphicsContextGLANGLE.cpp:
(WebCore::GraphicsContextGLOpenGL::resolveMultisamplingIfNecessary):
Use BlitFramebuffer for WebGL2 non-full framebuffer copyTexImage2D calls.
On WebGL we use BlitFramebufferANGLE as before.

LayoutTests:

* fast/canvas/webgl/copy-tex-image-and-sub-image-2d-expected.txt:
* fast/canvas/webgl/copy-tex-image-and-sub-image-2d.html:
Change the test to test WebGL2 and copyTexImage2D with non-full framebuffer
rectangles.

* fast/canvas/webgl/resources/webgl-test.js:
(create3DContext):
Fix logic error when trying to create WebGL2 context.

Canonical link: https://commits.webkit.org/235062@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@274141 268f45cc-cd09-0410-ab3c-d52691b4dbfc