Source/WebCore/platform/graphics/angle/GraphicsContextGLANGLE.cpp
@@ -250,13 +250,14 @@ void GraphicsContextGLOpenGL::resolveMultisamplingIfNecessary(const IntRect& rec
     gl::BindFramebuffer(GL_DRAW_FRAMEBUFFER_ANGLE, m_fbo);
 
     // FIXME: figure out more efficient solution for iOS.
-    IntRect resolveRect = rect;
-    // When using an ES 2.0 context, the full framebuffer must always be
-    // resolved; partial blits are not allowed.
-    if (!isGLES2Compliant() || rect.isEmpty())
-        resolveRect = IntRect(0, 0, m_currentWidth, m_currentHeight);
-
-    gl::BlitFramebufferANGLE(resolveRect.x(), resolveRect.y(), resolveRect.maxX(), resolveRect.maxY(), resolveRect.x(), resolveRect.y(), resolveRect.maxX(), resolveRect.maxY(), GL_COLOR_BUFFER_BIT, GL_NEAREST);
+    if (m_isForWebGL2) {
+        // ES 3.0 has BlitFramebuffer.
+        IntRect resolveRect = rect.isEmpty() ? IntRect { 0, 0, m_currentWidth, m_currentHeight } : rect;
+        gl::BlitFramebuffer(resolveRect.x(), resolveRect.y(), resolveRect.maxX(), resolveRect.maxY(), resolveRect.x(), resolveRect.y(), resolveRect.maxX(), resolveRect.maxY(), GL_COLOR_BUFFER_BIT, GL_NEAREST);
+    } else {
+        // ES 2.0 has BlitFramebufferANGLE only.
+        gl::BlitFramebufferANGLE(0, 0, m_currentWidth, m_currentHeight, 0, 0, m_currentWidth, m_currentHeight, GL_COLOR_BUFFER_BIT, GL_NEAREST);
+    }
     if (m_isForWebGL2) {
         gl::BindFramebuffer(GL_DRAW_FRAMEBUFFER, boundFrameBuffer);
         gl::BindFramebuffer(GL_READ_FRAMEBUFFER, boundReadFrameBuffer);
